--- a/index_mobile.html
+++ b/index_mobile.html
@@ -574,7 +574,12 @@ const SUPABASE_ANON = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 const { createClient } = supabase;
 const sb = createClient(SUPABASE_URL, SUPABASE_ANON);
 const sbAdmin = createClient(SUPABASE_URL, SUPABASE_ANON, {
-  auth: { autoRefreshToken: false, persistSession: false, storageKey: 'sb-admin-auth' }
+  auth: {
+    autoRefreshToken: false,
+    persistSession: false,
+    storageKey: 'sb-admin-auth',
+    lock: async (name, acquireTimeout, fn) => fn()
+  }
 });
 
 let currentUser    = null;
