--- a/index_mobile.html
+++ b/index_mobile.html
@@ -74,12 +74,16 @@ body{background:var(--bg);color:var(--text);font-family:'Rajdhani',sans-serif;di
 .proj-list-wrap{width:100%;max-width:360px;}
 .proj-list-label{font-size:10px;font-weight:700;letter-spacing:2px;color:var(--dim);text-transform:uppercase;margin-bottom:8px;font-family:'Share Tech Mono',monospace;padding-left:4px;}
 .proj-list{display:flex;flex-direction:column;gap:6px;}
-.proj-item{display:flex;align-items:center;background:var(--card);border:1px solid var(--border2);border-radius:8px;overflow:hidden;cursor:pointer;}
+.proj-item-wrap{display:flex;align-items:center;gap:6px;}
+.proj-item{flex:1;display:flex;align-items:center;background:var(--card);border:1px solid var(--border2);border-radius:8px;overflow:hidden;cursor:pointer;min-width:0;}
 .proj-item:active{opacity:.75;}
-.proj-item-body{flex:1;padding:12px 14px;}
-.proj-item-name{font-size:15px;font-weight:700;color:var(--text);}
+.proj-item-body{flex:1;padding:12px 14px;min-width:0;}
+.proj-item-name{font-size:15px;font-weight:700;color:var(--text);white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .proj-item-meta{font-size:10px;color:var(--dim);font-family:'Share Tech Mono',monospace;margin-top:2px;}
-.proj-item-del{padding:0 14px;align-self:stretch;display:flex;align-items:center;border-left:1px solid var(--border2);color:var(--red);font-size:16px;cursor:pointer;touch-action:manipulation;}
+.proj-item-del{width:40px;height:48px;flex-shrink:0;display:flex;align-items:center;justify-content:center;background:var(--card);border:1px solid var(--red);border-radius:8px;color:var(--red);font-size:16px;cursor:pointer;touch-action:manipulation;}
+.proj-item-del:active{opacity:.6;}
+.proj-item-team{width:40px;height:48px;flex-shrink:0;display:flex;align-items:center;justify-content:center;background:var(--card);border:1px solid var(--purple);border-radius:8px;color:var(--purple);font-size:18px;cursor:pointer;touch-action:manipulation;}
+.proj-item-team:active{opacity:.6;}
 .proj-empty{padding:30px;text-align:center;font-family:'Share Tech Mono',monospace;font-size:11px;color:var(--dim);line-height:2;}
 
 /* ── HEADER ── */
@@ -754,9 +758,13 @@ function renderProjects(projects){
     return;
   }
   projects.forEach(p=>{
-    const item=document.createElement('div'); item.className='proj-item';
     const isResp = p.responsible_id === currentUser.id;
     const canManage = currentUser.role==='admin' || isResp;
+
+    const wrap = document.createElement('div'); wrap.className='proj-item-wrap';
+
+    // Card principale — solo navigazione
+    const item = document.createElement('div'); item.className='proj-item';
     item.innerHTML=
       '<div class="proj-item-body">'+
         '<div class="proj-item-name">'+esc(p.name)+'</div>'+
@@ -764,23 +772,25 @@ function renderProjects(projects){
           (isResp ? '<span style="color:var(--orange)">● tu</span>' : esc(p.responsible_name||'—'))+
           ' · '+p.log_count+' rilev.'+
         '</div>'+
-      '</div>'+
-      (canManage ? '<div class="proj-item-team">⚑</div>' : '')+
-      (canManage ? '<div class="proj-item-del">✕</div>' : '');
-    item.querySelector('.proj-item-body').addEventListener('pointerup',()=>selectProject(p));
+      '</div>';
+    item.addEventListener('click', ()=>selectProject(p));
+    wrap.appendChild(item);
+
     if(canManage){
-      const teamBtn = item.querySelector('.proj-item-team');
-      if(teamBtn){
-        teamBtn.addEventListener('pointerdown',e=>{e.stopPropagation();});
-        teamBtn.addEventListener('pointerup',e=>{e.stopPropagation();openMembersScreen(p);});
-      }
-      const delBtn = item.querySelector('.proj-item-del');
-      if(delBtn){
-        delBtn.addEventListener('pointerdown',e=>{e.stopPropagation();});
-        delBtn.addEventListener('pointerup',e=>{e.stopPropagation();deleteProjConfirm(p.id,p.name);});
-      }
+      // Tasto risorse — completamente separato
+      const teamBtn = document.createElement('div'); teamBtn.className='proj-item-team';
+      teamBtn.textContent='👥';
+      teamBtn.addEventListener('click', ()=>openMembersScreen(p));
+      wrap.appendChild(teamBtn);
+
+      // Tasto elimina — completamente separato
+      const delBtn = document.createElement('div'); delBtn.className='proj-item-del';
+      delBtn.textContent='✕';
+      delBtn.addEventListener('click', ()=>deleteProjConfirm(p.id,p.name));
+      wrap.appendChild(delBtn);
     }
-    list.appendChild(item);
+
+    list.appendChild(wrap);
   });
 }
 
