--- a/index_mobile.html
+++ b/index_mobile.html
@@ -80,9 +80,9 @@ body{background:var(--bg);color:var(--text);font-family:'Rajdhani',sans-serif;di
 .proj-item-body{flex:1;padding:12px 14px;min-width:0;}
 .proj-item-name{font-size:15px;font-weight:700;color:var(--text);white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .proj-item-meta{font-size:10px;color:var(--dim);font-family:'Share Tech Mono',monospace;margin-top:2px;}
-.proj-item-del{width:40px;height:48px;flex-shrink:0;display:flex;align-items:center;justify-content:center;background:var(--card);border:1px solid var(--red);border-radius:8px;color:var(--red);font-size:16px;cursor:pointer;touch-action:manipulation;}
+.proj-item-del{width:44px;align-self:stretch;flex-shrink:0;display:flex;align-items:center;justify-content:center;background:var(--card);border:1px solid var(--red);border-radius:8px;color:var(--red);font-size:16px;cursor:pointer;touch-action:manipulation;}
 .proj-item-del:active{opacity:.6;}
-.proj-item-team{width:40px;height:48px;flex-shrink:0;display:flex;align-items:center;justify-content:center;background:var(--card);border:1px solid var(--purple);border-radius:8px;color:var(--purple);font-size:18px;cursor:pointer;touch-action:manipulation;}
+.proj-item-team{width:44px;align-self:stretch;flex-shrink:0;display:flex;align-items:center;justify-content:center;background:var(--card);border:1px solid var(--purple);border-radius:8px;color:var(--purple);font-size:18px;cursor:pointer;touch-action:manipulation;}
 .proj-item-team:active{opacity:.6;}
 .proj-empty{padding:30px;text-align:center;font-family:'Share Tech Mono',monospace;font-size:11px;color:var(--dim);line-height:2;}
 
@@ -282,7 +282,7 @@ body.sort-mode .sort-handle{display:block;}
 /* ── MEMBERS PANEL ── */
 .proj-item-team{padding:0 14px;align-self:stretch;display:flex;align-items:center;border-left:1px solid var(--border2);color:var(--purple);font-size:18px;font-weight:700;cursor:pointer;touch-action:manipulation;}
 .proj-item-team:active{opacity:.6;}
-.members-screen{position:fixed;inset:0;z-index:560;background:var(--bg);display:flex;flex-direction:column;transform:translateX(100%);transition:transform .3s cubic-bezier(.4,0,.2,1);}
+.members-screen{position:fixed;inset:0;z-index:620;background:var(--bg);display:flex;flex-direction:column;transform:translateX(100%);transition:transform .3s cubic-bezier(.4,0,.2,1);}
 .members-screen.show{transform:translateX(0);}
 .members-header{flex-shrink:0;display:flex;align-items:center;gap:10px;padding:10px 12px;background:var(--panel);border-bottom:1px solid var(--border);}
 .members-body{flex:1;overflow-y:auto;padding:14px;}
