--- a/index_mobile.html
+++ b/index_mobile.html
@@ -82,7 +82,7 @@ body{background:var(--bg);color:var(--text);font-family:'Rajdhani',sans-serif;di
 .proj-item-meta{font-size:10px;color:var(--dim);font-family:'Share Tech Mono',monospace;margin-top:2px;}
 .proj-item-del{width:44px;align-self:stretch;flex-shrink:0;display:flex;align-items:center;justify-content:center;background:var(--card);border:1px solid var(--red);border-radius:8px;color:var(--red);font-size:16px;cursor:pointer;touch-action:manipulation;}
 .proj-item-del:active{opacity:.6;}
-.proj-item-team{width:44px;align-self:stretch;flex-shrink:0;display:flex;align-items:center;justify-content:center;background:var(--card);border:1px solid var(--purple);border-radius:8px;color:var(--purple);font-size:18px;cursor:pointer;touch-action:manipulation;}
+.proj-item-team{width:44px;align-self:stretch;flex-shrink:0;display:flex;align-items:center;justify-content:center;background:rgba(179,136,255,0.08);border:2px solid var(--purple);border-radius:8px;color:var(--purple);font-size:18px;cursor:pointer;touch-action:manipulation;}
 .proj-item-team:active{opacity:.6;}
 .proj-empty{padding:30px;text-align:center;font-family:'Share Tech Mono',monospace;font-size:11px;color:var(--dim);line-height:2;}
 
