--- a/index_mobile.html
+++ b/index_mobile.html
@@ -793,18 +793,15 @@ function renderProjects(projects){
   toggleWrap.innerHTML=
     '<span class="proj-toggle-label">Tutti i progetti</span>'+
     '<label class="proj-toggle">'+
-      '<input type="checkbox" id="projToggle"'+((_showAllProjects||isAdminOrPM)?' checked':'')+
-        (isAdminOrPM?' disabled':'')+'>'+
+      '<input type="checkbox" id="projToggle"'+((_showAllProjects||isAdminOrPM)?' checked':'')+'>'+
       '<span class="proj-toggle-slider"></span>'+
     '</label>';
   list.appendChild(toggleWrap);
   const togInput = toggleWrap.querySelector('#projToggle');
-  if(!isAdminOrPM){
-    togInput.addEventListener('change', ()=>{
-      _showAllProjects = togInput.checked;
-      renderProjects(projects);
-    });
-  }
+  togInput.addEventListener('change', ()=>{
+    _showAllProjects = togInput.checked;
+    renderProjects(projects);
+  });
 
   if(!visible.length){
     const empty=document.createElement('div'); empty.className='proj-empty';
