--- a/index_mobile.html
+++ b/index_mobile.html
@@ -117,11 +117,11 @@ body{background:var(--bg);color:var(--text);font-family:'Rajdhani',sans-serif;di
 
 /* ── GRID ── */
 .scroll-area{flex:1;overflow-y:auto;-webkit-overflow-scrolling:touch;padding:12px;}
-.grid{display:grid;grid-template-columns:repeat(2,1fr);gap:10px;}
-@media(min-width:480px){.grid{grid-template-columns:repeat(3,1fr);}}
+.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;grid-auto-rows:130px;}
+@media(min-width:480px){.grid{grid-template-columns:repeat(3,1fr);grid-auto-rows:140px;}}
 
 /* ── CARD ── */
-.card{background:var(--card);border:1px solid var(--border2);border-radius:10px;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:6px;padding:18px 10px 13px;min-height:130px;position:relative;cursor:pointer;user-select:none;-webkit-user-select:none;transition:border-color .2s,background .2s;overflow:hidden;touch-action:none;}
+.card{background:var(--card);border:1px solid var(--border2);border-radius:10px;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:6px;padding:18px 10px 13px;position:relative;cursor:pointer;user-select:none;-webkit-user-select:none;transition:border-color .2s,background .2s;overflow:hidden;touch-action:pan-y;}
 .card::after{content:'';position:absolute;inset:0;border-radius:10px;background:linear-gradient(160deg,rgba(255,255,255,.025) 0%,transparent 60%);pointer-events:none;}
 .card.on{border-color:var(--orange);background:linear-gradient(160deg,rgba(255,85,0,.1) 0%,var(--card) 70%);box-shadow:0 0 20px rgba(255,85,0,.1);}
 .card.drag-src{opacity:.3;}
